--- a/NGOEventsWeb/NGOEventsWeb.csproj
+++ b/NGOEventsWeb/NGOEventsWeb.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\EventRegistrationsController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
